syntax = "proto3";

import "google/protobuf/any.proto";

option go_package = "/msgs;msgs";

// PList訊息資料
message PListMsg {
  repeated PListUnit messages = 1; // 訊息列表
}

// PList訊息單元資料
message PListUnit {
  int32 messageID = 1; // 訊息編號, 設置為int32以跟proto的列舉類型統一
  google.protobuf.Any message = 2; // 訊息資料
}

// PList訊息測試資料
message PListTest {
  string Data = 1; // 測試字串
}
